syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

option go_package = "github.com/elojah/trax/internal/user/dto";

import "pkg/gogoproto/gogo.proto";
import "pkg/pbtypes/string.proto";

import "pkg/paginate/paginate.proto";
import "internal/user/entity.proto";

message CreateEntityReq {
	string Name                 = 1;
    string Description          = 2;
    string AvatarURL            = 3;
}

message UpdateEntityReq {
	bytes ID                      = 1 [(gogoproto.customtype) = "pkg/ulid.ID", (gogoproto.nullable) = false];

	pbtypes.String Name           = 2;
    pbtypes.String Description    = 3;
    pbtypes.String AvatarURL      = 4;
}

message FetchEntityReq {
	bytes ID                      = 1 [(gogoproto.customtype) = "pkg/ulid.ID", (gogoproto.nullable) = false];
}

message ListEntityReq {
	paginate.Paginate Paginate    = 1 [(gogoproto.nullable) = true];
	string Search                 = 2;

	bool Own                      = 3;
	repeated bytes IDs            = 4 [(gogoproto.customtype) = "pkg/ulid.ID", (gogoproto.nullable) = false];
}

message ListEntityResp {
	repeated user.Entity Entities = 1 [(gogoproto.nullable) = false];
	uint64 Total                  = 2;
}

message DeleteEntityReq {
	bytes ID                      = 1 [(gogoproto.customtype) = "pkg/ulid.ID", (gogoproto.nullable) = false];
}

message DeleteEntityResp {
	user.Entity Entity            = 1 [(gogoproto.nullable) = false];
}
